--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
 
                 <!-- Favorites View (rendered by user-fav.js) -->
                 <div id="profile-favorites-view" class="profile-view"></div>
+
+                <!-- Terms and Conditions View (rendered by policy-terms.js) -->
+                <div id="policy-terms-view" class="profile-view"></div>
             </div>
         </section>
 
