--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
 
                 <!-- Terms and Conditions View (rendered by policy-terms.js) -->
                 <div id="policy-terms-view" class="profile-view"></div>
+
+                <!-- Terms and Conditions View (rendered by help-center.js) -->
+                <div id="help-center-view" class="profile-view"></div>
             </div>
         </section>
 
